fix issue #41 part 1.3 main result accordeon is now reachable for keyboard by using buttons, fix keyboard usage if menue is not active by adding visibility:hidden to closed sidebar, insert headings for search-results (thx also to @Don-King-Kong)

--- a/useroperations/static/useroperations/css/base.css
+++ b/useroperations/static/useroperations/css/base.css
@@ -857,8 +857,9 @@ ul {
     transform: translateX(0px);
     background-color: white;
 }
-.sidebar-wrapper.closed{
+.sidebar-wrapper.closed {
     transform: translateX(-318px);
+    visibility: hidden;
 }
 
 .sidebar-content{
